<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-aozora</artifactId>
  <version>0.0.2</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
            <arg>--add-exports</arg>
            <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>peg-mvn-repo</id> <!-- peg -->
      <url>https://raw.github.com/jeronimonunes/PEG/mvn-repo/</url>
    </repository>
    <repository>
      <id>gitlab-maven</id> <!-- vavi-text-aozora -->
      <url>https://gitlab.com/api/v4/projects/39845225/packages/maven</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.14.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-text-aozora</artifactId>
      <version>0.0.3</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.16</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.vavi-apps-fuse</groupId> <!-- vavi / com.github.umjammer.vavi-apps-fuse -->
      <artifactId>vavi-nio-file-archive</artifactId>
      <version>0.1.11</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>klab-commons-csv</artifactId>
      <version>2.0.4</version>
    </dependency>
    <dependency>
      <groupId>com.github.albfernandez</groupId>
      <artifactId>juniversalchardet</artifactId>
      <version>2.5.0</version>
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.5</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>br.ufmg.dcc.nanocomp</groupId>
      <artifactId>peg</artifactId>
      <version>0.10.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mozilla</groupId>
      <artifactId>rhino</artifactId>
      <version>1.8.1</version>
      <scope>runtime</scope>
    </dependency>
    <dependency> <!-- for jsr-223 -->
      <groupId>org.mozilla</groupId>
      <artifactId>rhino-engine</artifactId>
      <version>1.8.1</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>
</project>
